# Hypothesis2Daml

./: .gitignore  .gitmodules  LICENSE.md  README-pt.md  README.md  READ_ME.md  run_all.py  run_desugar.sh
azure/azure_contracts_solidity/: asset_transfer.sol  defective_component_counter.sol  frequent_flyer.sol
azure_contracts_solidity/: digital_locker.sol  simple_marketplace.sol
benchmark/SolidityCheckBenchmark/: 3owner_token.sol  agreement.sol  art_owner_and_bank.sol  burnable_token.sol  crowd_sale_token.sol  stopable_token.sol  vesting.sol
benchmark/verification_tools_article_benchmark/: AMM_v1.sol  Crowdfund_v1.sol  PaymentSplitter_v1.sol  VestingWallet_v1.sol  ZeroTokenBank_v5.sol
borrow_and_lending/move/: borrow_lending.move
borrow_and_lending/rust/borrow/programs/borrow/: Cargo.toml
borrow_and_lending/rust/borrow/programs/borrow/src/: lib.rs
borrow_and_lending/solidity/: borrow_lending.sol  testing.ts  token.sol
daml_parser/: Hello.daml  daml-parser.cabal  output.json  parse_daml.py
daml_repos/ghc-da-master-8.8.1-tentaiva/compiler/parser/: ApiAnnotation.hs  Ctype.hs  HaddockUtils.hs  Lexer.x  daml-parser.cabal
daml_repos/ghc-da-master-8.8.1-tentaiva/compiler/parser/app/: Main.hs
haskell_folder/: CHANGELOG.md  LICENSE  haskell-folder.cabal
haskell_folder/app/: Main.hs
solidity-to-lh-main/: .gitignore  README.md  jest.config.js  nodemon.json  package-lock.json  package.json
solidity-to-lh-main/__tests__/: gatherFunctions.test.js  gatherState.test.js  generateData.test.js  generateFunctions.test.js  liquidConditions.test.js  typeMappings.test.js
solidity-to-lh-main/azure_require/: AssetTransfer.sol  BasicProvenance.sol  DigitalLocker.sol  HelloBlockchain.sol  RefrigeratedTransportation.sol  RoomThermostat.sol  SimpleMarketplace.sol
solidity-to-lh-main/scripts/: compile-all.js  run_contract.js
solidity-to-lh-main/src/: example1.js  gatherFunctions.js  gatherState.js  generateData.js  generateFunctions.js  index.js  liquidConditions.js  server.js  test1.js  translator.js  typeMappings.js
solidity-to-lh-main/test_contracts/: test1.sol  test10.sol  test11.sol  test12.sol  test13.sol  test14_hello_blockchain_with_renames.sol  test15.sol  test16_hello_blockchain.sol  test17.sol  test18_simple_marketplace.sol  test19.sol  test20_RefrigeratedTransportation.sol  test21RefrigeratedTransportationTime.sol  test22.sol  (+20 more)
translations_azure/: READ_ME.md
(+320 files in other folders)
