cabal-version:   3.12
name:            daml-parser
version:         0.1.0.0
license:         NONE
author:          Valido
maintainer:      m.valido@campus.fct.unl.pt
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable daml-parser
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.13.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
